[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neverliie-ai-sdk"
version = "0.1.0"
description = "Minimal AI SDK for OpenAI, Anthropic, Google, and Mistral - optimized for Nuitka compilation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neverliie_ai_sdk*"]
